provarAnt/00D1b0000000d5bEAA/objects/ATDSA_FOUR__CategoryMobileConfig__c.object
<CustomObject>
    <description>Config object for DSA mobile app category button placement and background images</description>
    <fields>
        <fullName>ATDSA_FOUR__Button_Text_Align__c</fullName>
        <label>Button Text Align</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__CategoryBundleId__c</fullName>
        <description>ID for Content to use as Bundle for this category</description>
        <label>Category Bundle Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__CategoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to link to Category</description>
        <label>Category</label>
        <referenceTo>ATDSA_FOUR__Category__c</referenceTo>
        <relationshipLabel>Category Mobile Configurations</relationshipLabel>
        <relationshipName>Category_Mobile_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__ContentAttachmentId__c</fullName>
        <description>Attachment Id for image to use as background for content list buttons</description>
        <label>Content Background Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__ContentOverAttachmentId__c</fullName>
        <description>Attachment Id to use as image for over/down state of Content button</description>
        <label>Content Over Background Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__GalleryHeadingTextColor__c</fullName>
        <defaultValue>&quot;FFFFFF&quot;</defaultValue>
        <label>Gallery/Subcategory Heading Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__GalleryHeadingText__c</fullName>
        <label>Gallery/Subcategory Heading Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if this is the default for categories that do not have their own UI configs</description>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__IsDraft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__LandscapeAttachmentId__c</fullName>
        <description>Attachment Id of image to use for background for category in Landscape mode</description>
        <label>Landscape Background Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__LandscapeX__c</fullName>
        <description>X coordinate to use for top level category in landscape mode</description>
        <label>LandscapeX</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__LandscapeY__c</fullName>
        <description>Y coordinate to use for top level category button landscape mode</description>
        <label>LandscapeY</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__MAC_in_Edit__c</fullName>
        <formula>IF(ATDSA_FOUR__MobileAppConfigurationId__r.ATDSA_FOUR__inEdit__c , &quot;true&quot;, &quot;false&quot;)</formula>
        <label>MAC In Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__MobileAppConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to mobile application config to use these UI settings with</description>
        <label>Mobile App Configuration</label>
        <referenceTo>ATDSA_FOUR__MobileAppConfig__c</referenceTo>
        <relationshipLabel>Category Mobile Configurations</relationshipLabel>
        <relationshipName>Category_Mobile_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__OverlayBgAlpha__c</fullName>
        <defaultValue>50</defaultValue>
        <description>Alpha for overlay background color, defaults to 50</description>
        <label>Overlay Background Alpha</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__OverlayBgColor__c</fullName>
        <defaultValue>&quot;000000&quot;</defaultValue>
        <description>Hex value for overlay background color, defaults to black (000000)</description>
        <label>Overlay Background Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__OverlayTextColor__c</fullName>
        <defaultValue>&quot;FFFFFF&quot;</defaultValue>
        <description>Hex value for text color for category details, defaults to white (FFFFFF)</description>
        <label>Overlay Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__PortraitAttachmentId__c</fullName>
        <description>Attachment Id to be used for the background image in portrait mode for this category</description>
        <label>Portrait Background Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__PortraitX__c</fullName>
        <description>X coord for category button placement in Portrait Mode</description>
        <label>PortraitX</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__PortraitY__c</fullName>
        <description>Coordinates for category button placement on top level in portrait mode</description>
        <label>PortraitY</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Sub_Category_Background_Color__c</fullName>
        <defaultValue>&quot;000000&quot;</defaultValue>
        <label>Sub-Category Background Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Top_Level_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Top Level Category</label>
        <referenceTo>ATDSA_FOUR__Category__c</referenceTo>
        <relationshipLabel>Category Mobile Configurations (Top Level Category)</relationshipLabel>
        <relationshipName>Category_Mobile_Configurations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__UseCategoryBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UseCategoryBundle</label>
        <type>Checkbox</type>
    </fields>
    <label>Category Mobile Configuration</label>
    <listViews>
        <fullName>ATDSA_FOUR__draft_view</fullName>
        <columns>NAME</columns>
        <columns>ATDSA_FOUR__IsDraft__c</columns>
        <columns>ATDSA_FOUR__CategoryId__c</columns>
        <columns>ATDSA_FOUR__LandscapeAttachmentId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ATDSA_FOUR__MobileAppConfigurationId__c</columns>
        <columns>ATDSA_FOUR__CategoryBundleId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ATDSA_FOUR__IsDraft__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>draft view</label>
    </listViews>
    <nameField>
        <displayFormat>CMC-{00000000}</displayFormat>
        <label>Category Mobile Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Category Mobile Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>